added features for resetting and removing cards

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -37,6 +37,10 @@
     background: gray;
 }
 
+.white {
+    background: white;
+}
+
 .flip {
     transform: rotateY(180deg);
     background: black;
